--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root{
-  --cor-fundo: #01080E ;
+  --cor-fundo: #01080E;
   --cor-principal: #0B0D20 ;
-  --cor-secundaria: #212333; 
+  --cor-secundaria: #212333;
   --cor-destaque: #2BDEFD;
   --cor-texto: #D7F9FF;
 
 }
 
-body {
+body{
   background-color: var(--cor-fundo);
   color: var(--cor-texto);
   display: flex;
@@ -26,4 +26,22 @@ body {
 
 h1{
   color: var(--cor-destaque);
+}
+
+button{
+  background-color: var(--cor-secundaria);
+  color: var(--cor-texto);
+  border: none;
+  border-radius: 15px;
+  padding: 15px;
+  transition: background-color 0.3s;
+}
+
+button:hover{
+  background-color: var(--cor-destaque);
+  color: var(--cor-principal);
+}
+
+.caixa-perguntas{
+  padding-bottom: 10px;
 }
