--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root{
   --cor-fundo: #01080E;
-  --cor-principal: #0B0D20 ;
-  --cor-secundaria: #212333;
+  --cor-principal: #15182f ;
+  --cor-secundaria: #1227c2;
   --cor-destaque: #2BDEFD;
-  --cor-texto: #D7F9FF;
+  --cor-texto: #d6e9ec;
 
 }
 
