--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root{
   --cor-fundo: #01080E;
-  --cor-principal: #15182f ;
-  --cor-secundaria: #1227c2;
-  --cor-destaque: #2BDEFD;
+  --cor-principal: #2e3143 ;
+  --cor-secundaria: #12c290;
+  --cor-destaque: #82fd2b;
   --cor-texto: #d6e9ec;
 
 }
